code25_all/swift/27610244.txt
func bubbleSort(array: [Int]) -> [Int] {
    while !isSorted(array) {
        for index in 1..<array.count {
            if array[index - 1] > array[index] {                
                let temp: Int = array[index]
                array[index] = array[index - 1]
                array[index - 1] = temp
            }
        }
    }

    return array
}

func isSorted(array: [Int]) -> Bool {
    for index in 1..<array.count {
        if array[index - 1] > array[index] {
            return false
        }
    }

    return true
}

<stdin>:17:17: error: '@lvalue $T11' is not identical to 'Int'
array[index] = array[index - 1]
^
<stdin>:18:17: error: '@lvalue $T8' is not identical to 'Int'
array[index - 1] = temp
^

array[index]
array[index - 1]
Int
